--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -1,89 +1,154 @@
 # MD2Angebot User Configuration
 # Save this file to ~/.config/md2angebot/config.yaml
 
-# ==========================================
-# COMPANY INFORMATION
-# ==========================================
-company:
-  name: "Jane Doe Creative"
-  tagline: "Digital Solutions & Art"
-  # Default logo. Can be absolute or relative to home (~).
-  logo: "assets/images/logo_code.svg"
+active_preset: preset_1
 
-quote_types:
-  code:
+presets:
+  preset_1:
     name: "Software Development"
-    logo: "assets/images/logo_code.svg"
-  photography:
-    name: "Photography"
-    logo: "assets/images/logo_photography.svg" # Example
-  design:
-    name: "Design"
-    logo: "assets/images/logo_design.svg" # Example
+    
+    # ==========================================
+    # COMPANY INFORMATION
+    # ==========================================
+    company:
+      name: "Jane Doe Creative"
+      tagline: "Digital Solutions & Art"
+      # Default logo. Can be absolute or relative to home (~).
+      logo: "assets/images/logo_code.svg"
 
-# ==========================================
-# CONTACT DETAILS
-# ==========================================
-contact:
-  street: "Creative Avenue 42"
-  city: "Amsterdam"
-  postal_code: "1012 AB"
-  country: "Netherlands"
-  phone: "+31 6 1234 5678"
-  email: "hello@janedoe.com"
-  website: "www.janedoe.com"
+    # ==========================================
+    # CONTACT DETAILS
+    # ==========================================
+    contact:
+      street: "Creative Avenue 42"
+      city: "Amsterdam"
+      postal_code: "1012 AB"
+      country: "Netherlands"
+      phone: "+31 6 1234 5678"
+      email: "hello@janedoe.com"
+      website: "www.janedoe.com"
 
-# ==========================================
-# LEGAL INFORMATION
-# ==========================================
-legal:
-  # Value Added Tax ID
-  tax_id: "NL853492812B01"
-  # Chamber of Commerce (KvK) number
-  chamber_of_commerce: "67891234"
+    # ==========================================
+    # LEGAL INFORMATION
+    # ==========================================
+    legal:
+      # Value Added Tax ID
+      tax_id: "NL853492812B01"
+      # Chamber of Commerce (KvK) number
+      chamber_of_commerce: "67891234"
 
-# ==========================================
-# BANKING DETAILS
-# ==========================================
-bank:
-  holder: "Jane Doe"
-  iban: "NL91 ABNA 0417 1643 00"
-  bic: "ABNANL2A"
-  bank_name: "ABN AMRO"
+    # ==========================================
+    # BANKING DETAILS
+    # ==========================================
+    bank:
+      holder: "Jane Doe"
+      iban: "NL91 ABNA 0417 1643 00"
+      bic: "ABNANL2A"
+      bank_name: "ABN AMRO"
 
-# ==========================================
-# DEFAULTS
-# ==========================================
-defaults:
-  currency: "EUR"      # Currency symbol or code
-  tax_rate: 19         # Default VAT percentage (Germany)
-  payment_days: 14     # Default payment term in days
-  language: "de"       # Interface and output language (en, nl, de)
+    # ==========================================
+    # DEFAULTS
+    # ==========================================
+    defaults:
+      currency: "EUR"      # Currency symbol or code
+      tax_rate: 19         # Default VAT percentage (Germany)
+      payment_days: 14     # Default payment term in days
+      language: "en"       # Interface and output language (en, nl, de)
 
-# ==========================================
-# TYPOGRAPHY
-# ==========================================
-# You can use system fonts or Google Fonts names if available on your system.
-typography:
-  heading: "Montserrat"
-  body: "Source Sans Pro"
-  mono: "JetBrains Mono"
-  sizes:
-    company_name: 24
-    heading1: 18
-    heading2: 14
-    body: 10
-    small: 8
+    # ==========================================
+    # TYPOGRAPHY
+    # ==========================================
+    typography:
+      heading: "Montserrat"
+      body: "Source Sans Pro"
+      mono: "JetBrains Mono"
+      sizes:
+        company_name: 24
+        heading1: 18
+        heading2: 14
+        body: 10
+        small: 8
 
-# ==========================================
-# COLOR SCHEME
-# ==========================================
-colors:
-  primary: "#1a1a2e"      # Deep Navy - Headers, strong elements
-  accent: "#e94560"       # Coral Red - Highlights, totals
-  background: "#ffffff"   # Document background
-  text: "#2d2d2d"         # Main text color
-  muted: "#6c757d"        # Secondary text, less important info
-  border: "#dee2e6"       # Table borders, dividers
-  table_alt: "#f8f9fa"    # Alternating table row background
+    # ==========================================
+    # COLOR SCHEME
+    # ==========================================
+    colors:
+      primary: "#1a1a2e"      # Deep Navy - Headers, strong elements
+      accent: "#e94560"       # Coral Red - Highlights, totals
+      background: "#ffffff"   # Document background
+      text: "#2d2d2d"         # Main text color
+      muted: "#6c757d"        # Secondary text, less important info
+      border: "#dee2e6"       # Table borders, dividers
+      table_alt: "#f8f9fa"    # Alternating table row background
 
+  preset_2:
+    name: "Photography Studio"
+    
+    company:
+      name: "Jane Doe Photography"
+      tagline: "Capturing Moments"
+      logo: "assets/images/logo_code.svg" # Placeholder
+
+    contact:
+      street: "Studio Lane 5"
+      city: "Berlin"
+      postal_code: "10115"
+      country: "Germany"
+      phone: "+49 30 1234567"
+      email: "photo@janedoe.com"
+      website: "photo.janedoe.com"
+
+    legal:
+      tax_id: "DE123456789"
+      chamber_of_commerce: ""
+
+    bank:
+      holder: "Jane Doe Photography"
+      iban: "DE12 3456 7890 1234 56"
+      bic: "GENODED1BER"
+      bank_name: "Berliner Bank"
+
+    defaults:
+      currency: "EUR"
+      tax_rate: 19
+      payment_days: 7
+      language: "de"
+
+    typography:
+      heading: "Playfair Display"
+      body: "Lato"
+      mono: "Courier Prime"
+      sizes:
+        company_name: 28
+        heading1: 20
+        heading2: 16
+        body: 11
+        small: 9
+
+    colors:
+      primary: "#222222"
+      accent: "#d4a373"
+      background: "#fafafa"
+      text: "#333333"
+      muted: "#888888"
+      border: "#dddddd"
+      table_alt: "#f0f0f0"
+
+  # Presets 3-5 can be defined similarly
+  preset_3:
+    name: "Preset 3"
+    company: {}
+    contact: {}
+    legal: {}
+    bank: {}
+    defaults: {}
+    typography: {}
+    colors: {}
+
+  preset_4:
+    name: "Preset 4"
+    # ...
+  
+  preset_5:
+    name: "Preset 5"
+    # ...
