--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -56,6 +56,19 @@ presets:
       language: "en"       # Interface and output language (en, nl, de)
 
     # ==========================================
+    # QUOTATION NUMBER FORMAT
+    # ==========================================
+    # Placeholders: {YYYY}, {YY}, {MM}, {DD}, {N}, {NN}, {NNN}, {NNNN}, {PREFIX}
+    # Counter resets yearly if format contains {YYYY}/{YY}
+    # Counter resets monthly if format contains {MM}
+    quotation_number:
+      enabled: true
+      format: "DEV-{YYYY}-{NNN}"    # Example: DEV-2025-001
+      counter: 0
+      last_reset_year: null
+      last_reset_month: null
+
+    # ==========================================
     # TYPOGRAPHY
     # ==========================================
     typography:
@@ -114,6 +127,14 @@ presets:
       payment_days: 7
       language: "de"
 
+    # Different quotation format for photography (monthly reset)
+    quotation_number:
+      enabled: true
+      format: "PHOTO-{YY}{MM}-{NN}"    # Example: PHOTO-2501-01
+      counter: 0
+      last_reset_year: null
+      last_reset_month: null
+
     typography:
       heading: "Playfair Display"
       body: "Lato"
@@ -136,19 +157,52 @@ presets:
 
   # Presets 3-5 can be defined similarly
   preset_3:
-    name: "Preset 3"
+    name: "Consulting"
     company: {}
     contact: {}
     legal: {}
     bank: {}
     defaults: {}
+    # Invoice style quotation format
+    quotation_number:
+      enabled: true
+      format: "INV-{YYYY}-{NNNN}"    # Example: INV-2025-0001
+      counter: 0
+      last_reset_year: null
+      last_reset_month: null
     typography: {}
     colors: {}
 
   preset_4:
-    name: "Preset 4"
-    # ...
+    name: "Freelance (No Numbers)"
+    company: {}
+    contact: {}
+    legal: {}
+    bank: {}
+    defaults: {}
+    # Quotation numbering disabled - manual entry only
+    quotation_number:
+      enabled: false
+      format: ""
+      counter: 0
+      last_reset_year: null
+      last_reset_month: null
+    typography: {}
+    colors: {}
   
   preset_5:
-    name: "Preset 5"
-    # ...
+    name: "International"
+    company: {}
+    contact: {}
+    legal: {}
+    bank: {}
+    defaults: {}
+    # Compact format with company prefix
+    quotation_number:
+      enabled: true
+      format: "{PREFIX}-{YY}-{NNN}"    # Example: INT-25-001
+      counter: 0
+      last_reset_year: null
+      last_reset_month: null
+    typography: {}
+    colors: {}
