--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ WeasyPrint>=60.0
 Jinja2>=3.1.0
 PyYAML>=6.0
 watchdog>=3.0.0  # For auto-reloading preview
+certifi>=2023.0.0  # SSL certificates for API calls
 
 # Build tools (for creating standalone .app)
 py2app>=0.28
