Replace WeasyPrint with QtWebEngine for standalone PDF generation
- Rewrite pdf.py to use QWebEngineView.printToPdf() instead of WeasyPrint
- Add PyQt6-WebEngine dependency, remove WeasyPrint from requirements
- Update md2angebot.spec and setup.py with QtWebEngine imports
- Remove Homebrew dependency warning from build_app.sh
- Remove WeasyPrint-specific patch_fonttools_instancer utility
- Clean up main.py to remove WeasyPrint dependency check
- Pass preset page margins to QPageLayout for proper rendering

The app is now fully standalone - no system dependencies required on end-user Macs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 PyQt6>=6.5.0
+PyQt6-WebEngine>=6.5.0
 mistune>=3.0.0
-WeasyPrint>=60.0
 Jinja2>=3.1.0
 PyYAML>=6.0
 watchdog>=3.0.0  # For auto-reloading preview
@@ -9,4 +9,3 @@ certifi>=2023.0.0  # SSL certificates for API calls
 # Build tools (for creating standalone .app)
 py2app>=0.28
 pyinstaller>=6.0
-
