changed name to MD2Quote

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -1,5 +1,5 @@
-# MD2Angebot User Configuration
-# Save this file to ~/.config/md2angebot/config.yaml
+# MD2Quote User Configuration
+# Save this file to ~/.config/md2quote/config.yaml
 
 active_preset: preset_1
 
